add rpc config